# linux-bonjour

./: .gitignore  LICENSE  README.md  linux-bonjour.desktop  linux-bonjour_2.1.3_amd64.deb.sha256  linux-bonjour_2.1.7_amd64.deb.sha256  linux-bonjour_2.1.8_amd64.deb.sha256  linux-bonjour_2.1.9_amd64.deb.sha256  linux-bonjour_2.2.1_amd64.deb.sha256  linux-bonjour_2.2.2_amd64.deb.sha256  linux-bonjour_2.2.3_amd64.deb.sha256  linux-bonjour_2.2.4_amd64.deb.sha256  linux-bonjour_2.2.6_amd64.deb.sha256  linux-bonjour_2.2.7_amd64.deb.sha256  linux-bonjour_2.2.8_amd64.deb.sha256  linux-bonjour_2.3.10_amd64.deb.sha256  linux-bonjour_2.3.12_amd64.deb.sha256  linux-bonjour_2.3.14_amd64.deb.sha256  linux-bonjour_2.3.15_amd64.deb.sha256  linux-bonjour_2.3.16_amd64.deb.sha256  linux-bonjour_2.3.4_amd64.deb.sha256  linux-bonjour_2.3.6_amd64.deb.sha256  linux-bonjour_2.3.7_amd64.deb.sha256  linux-bonjour_2.3.8_amd64.deb.sha256  org.linuxbonjour.conf  org.linuxbonjour.policy  release_notes_v2.3.12.md  release_notes_v2.3.14.md  release_notes_v2.3.15.md  release_notes_v2.3.16.md  requirements.txt
config/: config.json  linux-bonjour.logrotate  linux-bonjour.service  linux-hello-ui.service  linux-hello.service
scripts/: 99-linux-bonjour-camera.rules  build_deb.sh  init_models.py  install.sh  optimize_models.py  purge.sh  release.sh  setup_pam.sh
src/bonjour-daemon/: Cargo.toml  linux-bonjour.service  test_client.py
src/bonjour-daemon/src/: auth_flow.rs  inference_worker.rs  ipc_utils.rs  liveness_3d.rs  main.rs  onnx_utils.rs  security_utils.rs  signature_utils.rs  signature_vault.rs
src/bonjour-gui/: package-lock.json  package.json
src/bonjour-gui/src/: index.html  main.js  styles.css
src/bonjour-gui/src-tauri/: Cargo.toml  tauri.conf.json
src/cli/: enroll.py
src/daemon/: camera.py  crypto_utils.py  dbus_service.py  init_models.py  liveness.py  main.py  sys_info.py  ui_server.py
src/gui/: gui_app.py  linux_bonjour_gui.py  pyside_gui.py
src/pam/: pam_hello.c
src/pam_rs/: Cargo.toml
(+17 files in other folders)
